# NS_Store

./: Cargo.toml  default.nix  flake.nix  justfile  shell.nix
src/: main.rs  store_manipulation.rs
src/templates/: additional_builtins.rs  mod.rs  nix.rs
static/: styles.css
styles/: tailwind.config.js
templates/layouts/: base.tera
templates/pages/: home.tera  store.tera
templates/partials/: nixstore.tera  storeitem.tera
