[package]
name = "ns"
version = "0.0.1"
license = "MIT"
description = "Observe your nix store"
homepage = "https://github.com/isabelroses/NS_Store"
authors = ["Isabel Roses <isabel@isabelroses.com>"]
edition = "2021"

[dependencies]
axum = "0.8.1"
futures = "0.3.31"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
rust-embed = { version = "8.5.0", features = ["include-exclude", "compression"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tera = { version = "1.20.0", features = ["builtins"] }
tokio = { version = "1.43.0", features = ["full"] }
